better code organization, and added BodyGraphic

--- a/public/KinAudio.html
+++ b/public/KinAudio.html
@@ -13,6 +13,9 @@
     <script src="js/RVWatcher.js"></script>
     <script src="js/Estimators.js"></script>
     <script src="js/CanvasTool.js"></script>
+    <script src="js/SkelWatcher.js"></script>
+    <script src="js/SkelApp.js"></script>
+    <script src="js/CanvasSkelApp.js"></script>
     <script src="js/KinAudioApp.js"></script>
     <script src="js/AudioEffectsTool.js"></script>
     <script src="js/BufferLoader.js"></script>
@@ -20,10 +23,7 @@
     <script src="js/libs/resonance-audio.min.js"></script>
     <script src="js/libs/tone/13.8.17/Tone.js"></script>
     <script src="../js/libs/sprintf.js"></script>
-    <script src="js/SkelWatcher.js"></script>
-    <script src="js/SkelApp.js"></script>
-
-
+ 
 </head>
 
 <body>
