moved much stuff into sample AudioProgram

--- a/public/KinAudio.html
+++ b/public/KinAudio.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Player</title>
+    <title>KinAudio Tool</title>
 
-    <script src="./js/libs/jquery-3.1.0.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="../js/MUSEPortal.js"></script>
+    <script src="js/libs/jquery-3.1.0.min.js"></script>
+    <script src="js/libs/sprintf.js"></script>
+    <script src="js/libs/resonance-audio.min.js"></script>
+    <script src="js/libs/tone/13.8.17/Tone.js"></script>
+     <script src="../js/MUSEPortal.js"></script>
     <script src="../js/kinDefs.js"></script>
     <script src="js/RVWatcher.js"></script>
     <script src="js/Estimators.js"></script>
@@ -20,12 +23,9 @@
     <script src="js/AudioEffectsTool.js"></script>
     <script src="js/BufferLoader.js"></script>
     <script src="js/ToneTool.js"></script>
-    <script src="js/libs/resonance-audio.min.js"></script>
-    <script src="js/libs/tone/13.8.17/Tone.js"></script>
-    <script src="../js/libs/sprintf.js"></script>
- 
+    <script src="js/Program.js"></script>
+    <script src="js/SamplePrograms.js"></script>
 </head>
-
 <body>
     <h4 id="showAudioControls">Audio Controls</h4>
     <div id="audioControls" style="padding:40px;">
