--- a/public/KinAudio.html
+++ b/public/KinAudio.html
@@ -32,27 +32,34 @@
         <input type="button" id="startButton" value="Start"> &nbsp;
         <button id="loadAudio" style="">Load Audio</button> &nbsp;
         <p>
-        <button id="addFilter" style="">Add Filter</button> &nbsp;
-        <button id="removeFilter" style="">Remove Filter</button><br>
-        <input type="range" id="filterFrequency" oninput="app.changeFilterFrequency()" min="0" max="1000" style="width:80%"/>
+        <button id="addFilter">Add Filter</button> &nbsp;
+        <button id="removeFilter">Remove Filter</button><br>
+        <!--
+        <input type="range" id="filterFrequency" oninput="app.program.changeFilterFrequency()" min="0" max="1000" style="width:80%"/>
         <label for="Frequency">Frequency</label>
-        <input type="range" id="detune" oninput="app.changeFilterDetune()" min="0" max="1000" style="width:80%"/>
+        <input type="range" id="detune" oninput="app.program.changeFilterDetune()" min="0" max="1000" style="width:80%"/>
         <label for="Detune">Detune</label>
-        <input type="range" id="Q" oninput="app.changeFilterQ()" min="0" max="10" style="width:80%"/>
+        <input type="range" id="Q" oninput="app.program.changeFilterQ()" min="0" max="10" style="width:80%"/>
+        <label for="Q">Q</label>
+        -->
+        <input type="range" id="filterFrequency" changeFilterFrequency()" min="0" max="1000" style="width:80%"/>
+        <label for="Frequency">Frequency</label>
+        <input type="range" id="detune" oninput="app.program.changeFilterDetune()" min="0" max="1000" style="width:80%"/>
+        <label for="Detune">Detune</label>
+        <input type="range" id="Q" oninput="app.program.changeFilterQ()" min="0" max="10" style="width:80%"/>
         <label for="Q">Q</label>
         <p>
         <input type="checkbox" checked id="handleRVMessagesCB" /> handle RV Messages 
         </p>
     </div>
-    <div id="log">
-        Starting...
-    </div>
-    <div id="summary">
-        &nbsp;
-    </div>
+    <pre id="status">
+        waiting for start...
+    </pre>
+    <h4 id="showMessage">Show Message</h4>
+    <div id="messageDiv" style="height:160px"></div>
     <div>
         <h4 id="trackedBodiesInfo">Tracked Bodies</h4>
-            <pre id="bodyStatus" style="font-size: 16px" hidden></pre>
+        <pre id="bodyStatus" style="font-size: 16px" hidden></pre>
     </div>
     <h4 id="showTrackingCanvas">Tracking Canvas</h4>
     <canvas id="trackingCanvas" width="720" height="480"
