--- a/public/TwoHandInstrument.html
+++ b/public/TwoHandInstrument.html
@@ -25,21 +25,17 @@
     <script src="js/ToneTool.js"></script>
     <script src="js/Program.js"></script>
     <script src="js/TwoHandInstrument.js"></script>
+
 </head>
 <body>
     <h4 id="showAudioControls">Audio Controls</h4>
     <div id="audioControls" style="padding:40px;">
         <input type="button" id="startButton" value="Start"> &nbsp;
         <button id="loadAudio" style="">Load Audio</button> &nbsp;
+        <button id="stopDrums" style="">Stop Drums</button> &nbsp;
         <p>
-        <button id="addFilter">Add Filter</button> &nbsp;
-        <button id="removeFilter">Remove Filter</button><br>
-        <input type="range" id="filterFrequency" changeFilterFrequency()" min="0" max="1000" style="width:80%"/>
-        <label for="Frequency">Frequency</label>
-        <input type="range" id="detune" oninput="app.program.changeFilterDetune()" min="0" max="1000" style="width:80%"/>
-        <label for="Detune">Detune</label>
-        <input type="range" id="Q" oninput="app.program.changeFilterQ()" min="0" max="10" style="width:80%"/>
-        <label for="Q">Q</label>
+        <input type="range" id="changePart" oninput="app.program.changeDrumPart()" min="1" max="5" style="width:80%"/>
+        <label for="changePart">changePart</label>
         <p>
         <input type="checkbox" checked id="handleRVMessagesCB" /> handle RV Messages
         </p>
