--- a/public/Wavey1.html
+++ b/public/Wavey1.html
@@ -11,7 +11,7 @@
     <script src="js/libs/sprintf.js"></script>
     <script src="js/libs/resonance-audio.min.js"></script>
     <script src="js/libs/tone/13.8.17/Tone.js"></script>
-     <script src="../js/MUSEPortal.js"></script>
+    <script src="../js/MUSEPortal.js"></script>
     <script src="../js/kinDefs.js"></script>
     <script src="js/RVWatcher.js"></script>
     <script src="js/Estimators.js"></script>
@@ -24,13 +24,15 @@
     <script src="js/BufferLoader.js"></script>
     <script src="js/ToneTool.js"></script>
     <script src="js/Program.js"></script>
-    <script src="js/Prog1.js"></script>
+    <script src="Programs/Wavey1.js"></script>
 </head>
 <body>
     <h4 id="showAudioControls">Audio Controls</h4>
     <div id="audioControls" style="padding:40px;">
         <input type="button" id="startButton" value="Start"> &nbsp;
         <button id="loadAudio" style="">Load Audio</button> &nbsp;
+        <button id="beep1">beep1</button> &nbsp;
+        <button id="beep2">beep2</button> &nbsp;
         <p>
         <button id="addFilter">Add Filter</button> &nbsp;
         <button id="removeFilter">Remove Filter</button><br>
@@ -61,8 +63,7 @@
     var app = null;
         $(document).ready(() => {
             app = new KinAudioApp();
-            var prog = new Prog1(app);
-            app.setProgram(prog);
+            app.setProgram(new Wavey1(app));
         });
     </script>
 </body>
