--- a/public/KinAudio.html
+++ b/public/KinAudio.html
@@ -27,9 +27,9 @@
     <script src="js/Prog1.js"></script>
 </head>
 <body>
+    <button id="startProgram">Start Program</button>
     <h4 id="showAudioControls">Audio Controls</h4>
     <div id="audioControls" style="padding:40px;">
-        <input type="button" id="startButton" value="Start"> &nbsp;
         <button id="loadAudio" style="">Load Audio</button> &nbsp;
         <p>
         <button id="addFilter">Add Filter</button> &nbsp;
@@ -61,8 +61,7 @@
     var app = null;
         $(document).ready(() => {
             app = new KinAudioApp();
-            var prog = new Prog1(app);
-            app.setProgram(prog);
+            app.setProgramClass(Prog1);
         });
     </script>
 </body>
