--- a/public/Wavey1.html
+++ b/public/Wavey1.html
@@ -56,8 +56,11 @@
         <pre id="bodyStatus" style="font-size: 16px" hidden></pre>
     </div>
     <h4 id="showTrackingCanvas">Tracking Canvas</h4>
+    <div id="canvasDiv">
+    <pre id="canvasStat"></pre>
     <canvas id="trackingCanvas" width="720" height="480"
        style="border-style: solid; border-width:2; width: 95%"></canvas>
+    </div>
     
     <script>
     var app = null;
