added a start drums button

--- a/public/TwoHandInstrument.html
+++ b/public/TwoHandInstrument.html
@@ -31,7 +31,7 @@
     <button id="startProgram">Start Program</button>
     <h4 id="showAudioControls">Audio Controls</h4>
     <div id="audioControls" style="padding:40px;">
-        <input type="button" id="startButton" value="Start"> &nbsp;
+        <button id="startDrums" style="">Start Drums</button> &nbsp;
         <button id="loadAudio" style="">Load Audio</button> &nbsp;
         <button id="stopDrums" style="">Stop Drums</button> &nbsp;
         <p>
