added necessary included files

--- a/public/TwoHandInstrument.html
+++ b/public/TwoHandInstrument.html
@@ -13,12 +13,16 @@
     <script src="js/libs/tone/13.8.17/Tone.js"></script>
     <script src="../js/MUSEPortal.js"></script>
     <script src="../js/kinDefs.js"></script>
+    <script src="../js/LeapClient.js"></script>
+    <script src="../js/LeapRenderer.js"></script>
+    <script src="../js/libs/math3d.js"></script>
     <script src="js/RVWatcher.js"></script>
     <script src="js/Estimators.js"></script>
     <script src="js/AppProxy.js"></script>
     <script src="js/CanvasTool.js"></script>
     <script src="js/SkelWatcher.js"></script>
     <script src="js/CanvasSkelWatcher.js"></script>
+    <script src="js/CanvasLeapWatcher.js"></script>
     <script src="js/KinAudioApp.js"></script>
     <script src="js/AudioEffectsTool.js"></script>
     <script src="js/BufferLoader.js"></script>
