--- a/public/MidiPlay.html
+++ b/public/MidiPlay.html
@@ -30,13 +30,11 @@
     <script src="js/ToneTool.js"></script>
     <script src="js/Program.js"></script>
     <script src="js/KinPlayMidi.js"></script>
-    <script src="js/Prog1.js"></script>
 </head>
 
 <body>
-    <button id="startProgram">Start Program</button>
-    <h4 id="showAudioControls">Audio Controls</h4>
-    <div id="audioControls" style="padding:40px;">
+    <h4 id="showProgramControls">Program Controls</h4>
+    <div id="programControls" style="padding:40px;">
         <button id="loadAudio">Load Audio</button> &nbsp;
         <p></p>
         <button id="start">Start</button> &nbsp;
@@ -45,29 +43,9 @@
         <p></p>
         <input type="checkbox" checked id="handleRVMessagesCB" /> handle RV Messages
     </div>
-    <pre id="status">
-        waiting for start...
-    </pre>
-    <h4 id="showMessage">Show Message</h4>
-    <div id="messageDiv" style="height:160px"></div>
-    <div>
-        <h4 id="trackedBodiesInfo">Tracked Bodies</h4>
-        <pre id="bodyStatus" style="font-size: 16px" hidden></pre>
-    </div>
-    <h4 id="showTrackingCanvas">Tracking Canvas</h4>
-    <div id="canvasDiv">
-        <pre id="canvasStat"></pre>
-        <canvas id="trackingCanvas" width="720" height="480"
-            style="border-style: solid; border-width:2; width: 95%"></canvas>
-    </div>
+    <div id="museDiv"></div>
     <script>
-        var app = null;
-        $(document).ready(() => {
-            //app = new KinAudioApp();
-            //app.setProgramClass(Prog1);
-            app = new KinAudioApp();
-            app.setProgramClass(KinMidiPlay);
-        });
+        $(document).ready(() => KinAudioApp.runApp({ program: KinMidiPlay }));
     </script>
 </body>
 
