--- a/public/MidiPlay.html
+++ b/public/MidiPlay.html
@@ -37,8 +37,8 @@
     <div id="programControls" style="padding:40px;">
         <button id="loadAudio">Load Audio</button> &nbsp;
         <p></p>
-        <button id="start">Start</button> &nbsp;
-        <button id="stop">Stop</button><br>
+        <button id="startMidi">Start Song</button> &nbsp;
+        <button id="stopMidi">Stop Song</button><br>
         <input type="range" id="tempo" min="0" max="1000" style="width:80%" />
         <p></p>
         <input type="checkbox" checked id="handleRVMessagesCB" /> handle RV Messages
