--- a/public/museDiv.html
+++ b/public/museDiv.html
@@ -3,15 +3,18 @@
 <pre id="status">
         waiting for start...
     </pre>
-<h4 id="showMessage">Show Message</h4>
-<div id="messageDiv" style="height:160px"></div>
-<div>
-    <h4 id="trackedBodiesInfo">Tracked Bodies</h4>
-    <pre id="bodyStatus" style="font-size: 16px" hidden></pre>
-</div>
+<h4 id="trackedHandsInfo">Tracked Hands</h4>
+<pre id="handsStatus" style="font-size: 16px"></pre>
+
+<h4 id="trackedBodiesInfo">Tracked Bodies</h4>
+<pre id="bodyStatus" style="font-size: 16px" hidden></pre>
+
 <h4 id="showTrackingCanvas">Tracking Canvas</h4>
 <div id="canvasDiv">
     <pre id="canvasStat"></pre>
     <canvas id="trackingCanvas" width="720" height="480"
         style="border-style: solid; border-width:2; width: 95%"></canvas>
 </div>
+
+<h4 id="showMessage">Show Message</h4>
+<div id="messageDiv" style="height:160px"></div>
