--- a/public/TwoHands.html
+++ b/public/TwoHands.html
@@ -20,6 +20,7 @@
     <script src="js/Estimators.js"></script>
     <script src="js/AppProxy.js"></script>
     <script src="js/CanvasTool.js"></script>
+    <script src="js/StateVariables.js"></script>
     <script src="js/SkelWatcher.js"></script>
     <script src="js/CanvasSkelWatcher.js"></script>
     <script src="js/CanvasLeapWatcher.js"></script>
