changed parameter names from energy to error and fixed Prog1

--- a/public/Prog1.html
+++ b/public/Prog1.html
@@ -19,6 +19,9 @@
     <script src="js/CanvasTool.js"></script>
     <script src="js/SkelWatcher.js"></script>
     <script src="js/CanvasSkelWatcher.js"></script>
+    <script src="js/CanvasLeapWatcher.js"></script>
+    <script src="../js/LeapClient.js"></script>
+    <script src="../js/LeapRenderer.js"></script>
     <script src="js/KinAudioApp.js"></script>
     <script src="js/AudioEffectsTool.js"></script>
     <script src="js/BufferLoader.js"></script>
