added math3d.js and StateVariables.js scripts to RVAudioFeedback.html

--- a/public/RVAudioFeedback.html
+++ b/public/RVAudioFeedback.html
@@ -17,11 +17,13 @@
     <script src="js/Estimators.js"></script>
     <script src="js/AppProxy.js"></script>
     <script src="js/CanvasTool.js"></script>
+    <script src="js/StateVariables.js"></script>
     <script src="js/SkelWatcher.js"></script>
     <script src="js/CanvasSkelWatcher.js"></script>
     <script src="js/CanvasLeapWatcher.js"></script>
     <script src="../js/LeapClient.js"></script>
     <script src="../js/LeapRenderer.js"></script>
+    <script src="../js/libs/math3d.js"></script>
     <script src="js/KinAudioApp.js"></script>
     <script src="js/AudioEffectsTool.js"></script>
     <script src="js/BufferLoader.js"></script>
