--- a/public/RVAudioFeedback.html
+++ b/public/RVAudioFeedback.html
@@ -32,7 +32,6 @@
     <script src="js/RVAudioFeedback.js"></script>
 </head>
 <body>
-    <button id="startProgram">Start Program</button>
     <h4 id="showAudioControls">Audio Controls</h4>
     <div id="audioControls" style="padding:40px;">
         <button id="loadAudio" style="">Load Audio</button> &nbsp;
@@ -49,28 +48,9 @@
         <input type="checkbox" checked id="handleRVMessagesCB" /> handle RV Messages 
         </p>
     </div>
-    <pre id="status">
-        waiting for start...
-    </pre>
-    <h4 id="showMessage">Show Message</h4>
-    <div id="messageDiv" style="height:160px"></div>
-    <div>
-        <h4 id="trackedBodiesInfo">Tracked Bodies</h4>
-        <pre id="bodyStatus" style="font-size: 16px" hidden></pre>
-    </div>
-    <h4 id="showTrackingCanvas">Tracking Canvas</h4>
-    <div id="canvasDiv">
-    <pre id="canvasStat"></pre>
-    <canvas id="trackingCanvas" width="720" height="480"
-       style="border-style: solid; border-width:2; width: 95%"></canvas>
-    </div>
-    
+    <div id="museDiv"></div>
     <script>
-    var app = null;
-        $(document).ready(() => {
-            app = new KinAudioApp();
-            app.setProgramClass(RVAudioFeedback);
-        });
+        $(document).ready(() => KinAudioApp.runApp({ program: RVAudioFeedback }));
     </script>
 </body>
 
