example of how to send message to set auras

--- a/public/KinAudio.html
+++ b/public/KinAudio.html
@@ -29,7 +29,7 @@
     <script src="js/BufferLoader.js"></script>
     <script src="js/ToneTool.js"></script>
     <script src="js/Program.js"></script>
-    <script src="js/Prog1.js"></script>
+    <script src="js/SamplePrograms.js"></script>
 </head>
 
 <body>
@@ -49,6 +49,7 @@
             <p>
                 <input type="checkbox" checked id="handleRVMessagesCB" /> handle RV Messages
             </p>
+            <button id="showAuras">Auras</button>
     </div>
     <div id="museDiv"></div>
     <script>
