added CloudGraphic used in Midi sample

--- a/public/museDiv.html
+++ b/public/museDiv.html
@@ -1,5 +1,6 @@
 
-<button id="startProgram">Start Program</button>
+<button id="startProgram">Start Program</button> &nbsp;
+<button id="leapView">Hands View</button>
 <pre id="status">
         waiting for start...
     </pre>
