created auraTone with Tone.js

--- a/public/TwoHands.html
+++ b/public/TwoHands.html
@@ -72,6 +72,10 @@
                 <input type="range" id="velocity" oninput="app.program.updateAuraTone()" min="0" max="50" style="width:80%" />
                 <label for="velocity">Hands velocity</label>
             </p>
+            <p>
+                <input type="checkbox" checked id="usingAudioEffects" /> AudioEffects
+                <input type="checkbox" checked id="usingToneTool" /> ToneTool
+            </p>
         </div>
         
     </div>
