added 1EuroFilter to VLR, DLR, HLR data

--- a/public/TwoHands.html
+++ b/public/TwoHands.html
@@ -29,6 +29,7 @@
     <script src="js/BufferLoader.js"></script>
     <script src="js/ToneTool.js"></script>
     <script src="js/Program.js"></script>
+    <script src="js/OneEuroFilter.js"></script>
     <script src="js/TwoHandInstrument.js"></script>
 
 </head>
