--- a/public/TwoHands.html
+++ b/public/TwoHands.html
@@ -39,45 +39,49 @@
         <p>
             <input type="checkbox" checked id="handleRVMessagesCB" /> handle RV Messages
         </p>
+        <h4 id="showDrumsControls">Drums:</h4>
+        <div id="drumsControls" style="padding:40px;">
+            <button id="startDrums" style="">Start Drums</button> &nbsp;
+            <button id="loadAudio" style="">Load Audio</button> &nbsp;
+            <button id="stopDrums" style="">Stop Drums</button> &nbsp;
+            <p>
+                <input type="range" id="changePart" oninput="app.program.changeDrumPart()" min="1" max="5"
+                    style="width:80%">
+                <label for="changePart">change Part</label>
+                <input type="range" id="changeTempo" oninput="app.program.changeDrumsTempo()" min="30" max="256"
+                    style="width:80%">
+                <label for="changeTempo">change Tempo</label>
+            </p>
+        </div>
+        <h4 id="showHandControls">Hand Controls</h4>
+        <div id="handControls" style="padding:40px;">
+            <button id="leftUP" style="">Left Hand Up</button> &nbsp;
+            <button id="leftDown" style="">Left Hand Down</button> &nbsp;
+            <p>
+                <input type="range" id="RH_Slide" oninput="app.program.RH_Slide()" min="1" max="5" style="width:80%" />
+                <label for="RH_Slide">Right Hand Slider</label>
+            </p>
+        </div>
+        <h4 id="showAuraToneControls">Aura Tone Controls</h4>
+        <div id="auraToneControls" style="padding:40px;">
+            <button id="createAuraTone" style="">Create Aura Tone</button> &nbsp;
+            <button id="playAuraTone" style="">Play Aura Tone</button> &nbsp;
+            <button id="stopAuraTone" style="">Stop Aura Tone</button> &nbsp;
+            <p>
+                <input type="range" id="DLR" oninput="app.program.updateAuraTone()" min="0" max="50"
+                    style="width:80%" />
+                <label for="DLR">Hands distance</label>
+                <input type="range" id="velocity" oninput="app.program.updateAuraTone()" min="0" max="50"
+                    style="width:80%" />
+                <label for="velocity">Hands velocity</label>
+            </p>
+            <p>
+                <input type="checkbox" checked id="usingAudioEffects" /> AudioEffects
+                <input type="checkbox" checked id="usingToneTool" /> ToneTool
+            </p>
+        </div>
     </div>
-    <h4 id="showDrumsControls">Drums:</h4>
-    <div id="drumsControls" style="padding:40px;">
-        <button id="startDrums" style="">Start Drums</button> &nbsp;
-        <button id="loadAudio" style="">Load Audio</button> &nbsp;
-        <button id="stopDrums" style="">Stop Drums</button> &nbsp;
-        <p>
-            <input type="range" id="changePart" oninput="app.program.changeDrumPart()" min="1" max="5" style="width:80%">
-            <label for="changePart">change Part</label>
-            <input type="range" id="changeTempo" oninput="app.program.changeDrumsTempo()" min="30" max="256"style="width:80%">
-            <label for="changeTempo">change Tempo</label>
-        </p>
-    </div>
-    <h4 id="showHandControls">Hand Controls</h4>
-    <div id="handControls" style="padding:40px;">
-        <button id="leftUP" style="">Left Hand Up</button> &nbsp;
-        <button id="leftDown" style="">Left Hand Down</button> &nbsp;
-        <p>
-            <input type="range" id="RH_Slide" oninput="app.program.RH_Slide()" min="1" max="5" style="width:80%" />
-            <label for="RH_Slide">Right Hand Slider</label>
-        </p>
-    </div>
-    <h4 id="showAuraToneControls">Aura Tone Controls</h4>
-    <div id="auraToneControls" style="padding:40px;">
-        <button id="createAuraTone" style="">Create Aura Tone</button> &nbsp;
-        <button id="playAuraTone" style="">Play Aura Tone</button> &nbsp;
-        <button id="stopAuraTone" style="">Stop Aura Tone</button> &nbsp;
-        <p>
-            <input type="range" id="DLR" oninput="app.program.updateAuraTone()" min="0" max="50" style="width:80%" />
-            <label for="DLR">Hands distance</label>
-            <input type="range" id="velocity" oninput="app.program.updateAuraTone()" min="0" max="50"
-                style="width:80%" />
-            <label for="velocity">Hands velocity</label>
-        </p>
-        <p>
-            <input type="checkbox" checked id="usingAudioEffects" /> AudioEffects
-            <input type="checkbox" checked id="usingToneTool" /> ToneTool
-        </p>
-    </div>
+
 
     <div id="museDiv"></div>
     <script>
