added simple graph widget to CanvasTool

--- a/public/MidiPlay.html
+++ b/public/MidiPlay.html
@@ -16,6 +16,7 @@
     <script src="../js/LeapClient.js"></script>
     <script src="../js/LeapRenderer.js"></script>
     <script src="../js/libs/math3d.js"></script>
+    <script src="../js/libs/dat.gui.js"></script>
     <script src="js/libs/Midi.js"></script>
     <script src="js/RVWatcher.js"></script>
     <script src="js/Estimators.js"></script>
