--- a/public/museDiv.html
+++ b/public/museDiv.html
@@ -1,6 +1,7 @@
 
 <button id="startProgram">Start Program</button> &nbsp;
-<button id="leapView">Hands View</button>
+<button id="leapView">Hands View</button> &nbsp;
+<button id="highView">High View</button>
 <pre id="status">
         waiting for start...
     </pre>
