added aura control via slider and trail graph

--- a/public/KinAudio.html
+++ b/public/KinAudio.html
@@ -16,6 +16,7 @@
     <script src="../js/LeapClient.js"></script>
     <script src="../js/LeapRenderer.js"></script>
     <script src="../js/libs/math3d.js"></script>
+    <script src="../js/libs/dat.gui.js"></script>
     <script src="js/RVWatcher.js"></script>
     <script src="js/Estimators.js"></script>
     <script src="js/AppProxy.js"></script>
@@ -49,6 +50,7 @@
             <p>
                 <input type="checkbox" checked id="handleRVMessagesCB" /> handle RV Messages
             </p>
+            <input type="range" id="auraEnergy" min="0" max="1000" style="width:80%" /> Aura Energy <br>
             <button id="showAuras">Auras</button>
     </div>
     <div id="museDiv"></div>
