added dat.gui scripts to app htmls

--- a/public/RVAudioFeedback.html
+++ b/public/RVAudioFeedback.html
@@ -24,6 +24,7 @@
     <script src="../js/LeapClient.js"></script>
     <script src="../js/LeapRenderer.js"></script>
     <script src="../js/libs/math3d.js"></script>
+    <script src="../js/libs/dat.gui.js"></script>
     <script src="js/KinAudioApp.js"></script>
     <script src="js/AudioEffectsTool.js"></script>
     <script src="js/BufferLoader.js"></script>
