moved more things to Programs dir for dynamic loading

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <head>
 </head>
 <body>
-<a href="KinAudio.html">KinAudio</a>
+    <a href="runApp.html">runApp</a><br>
+    <a href="runApp.html?prog=MidiPlay1">MidiPlay1</a><br>
 </body>
 </html>
   
