--- a/public/ChiGongFeedback.html
+++ b/public/ChiGongFeedback.html
@@ -20,7 +20,7 @@
     <script src="js/RVWatcher.js"></script>
     <script src="js/Estimators.js"></script>
     <script src="js/AppProxy.js"></script>
-    <script src="js/CanvasTool.js"></script>
+    <script src="CanvasTool/js/CanvasTool.js"></script>
     <script src="js/StateVariables.js"></script>
     <script src="js/SkelWatcher.js"></script>
     <script src="js/CanvasSkelWatcher.js"></script>
