added chord transposition option

--- a/public/Programs/TwoHands.html
+++ b/public/Programs/TwoHands.html
@@ -37,6 +37,8 @@
     <p>
         <input type="checkbox" checked id="usingAudioEffects" /> AudioEffects
         <input type="checkbox" checked id="usingToneTool" /> ToneTool
+        <input type="checkbox" checked id="transposeOnOff" /> TransposeOn/Off
+
     </p>
 </div>
 <h4 id="showSmoothingControl">1 Euro Filter Comparison</h4>
