removed start program button

--- a/public/museDiv.html
+++ b/public/museDiv.html
@@ -1,5 +1,6 @@
-
-<button id="startProgram">Start Program</button> &nbsp;
+<h4 id="showProgramControls">Program Controls</h4>
+<div id="programControls" style="padding:40px;">
+</div>
 <button id="leapView">Hands View</button> &nbsp;
 <button id="highView">High View</button>
 <pre id="status">
