removed the bell instruments to the old TwoHandInstrument script

--- a/public/TwoHands.html
+++ b/public/TwoHands.html
@@ -40,6 +40,7 @@
     <div id="programControls">
         <p>
             <input type="checkbox" checked id="handleRVMessagesCB" /> handle RV Messages
+            <button id="startProgram">Start Program</button> &nbsp;
         </p>
         <h4 id="showDrumsControls">Drums:</h4>
         <div id="drumsControls" style="padding:40px;">
