add button for starting drums

--- a/public/Programs/RVFeedback.html
+++ b/public/Programs/RVFeedback.html
@@ -1,6 +1,7 @@
 <h4 id="showAudioControls">Audio Controls</h4>
 <div id="audioControls" style="padding:40px;">
     <button id="loadAudio" style="">Load Audio</button> &nbsp;
+    <button id="startDrums" style="">Start Drums</button> &nbsp;
     <p>
         <button id="addFilter">Add Filter</button> &nbsp;
         <button id="removeFilter">Remove Filter</button><br>
