--- a/public/beats.html
+++ b/public/beats.html
@@ -10,12 +10,11 @@
 
 <body>
     <div id="beatsDiv"></div>
-    <div id = "grid1" class="grid"></div>
-    <div class="controls">
+    <p></p>
+    <div class="controls" xxstyle="border-width:3;border:solid">
         <button id="clear">Clear</button>
         <button id="random">Random</button>
-        <button id="export">Export <br>(json)</button>
-        <a id="download_link" style="display:none"></a>
+        <button id="export">Export</button>
         <button id="beat">Beat</button>
     </div>
     <script src="/socket.io/socket.io.js"></script>
