now beats can save a few songs under buttons

--- a/public/beats.html
+++ b/public/beats.html
@@ -15,7 +15,7 @@
             height: 40px;
         }
         .beatsbutton {
-            margin-right: 10px;
+            margin-right: 8px;
             width: 32px;
             height: 24px;
             border-style: solid;
@@ -34,6 +34,7 @@
         <button id="export">Export</button>
         <button id="beat">Beat</button>
     </div>
+    <div id="songs"></div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/libs/jquery-3.1.0.min.js"></script>
     <script src="js/libs/sprintf.js"></script>
