moved CanvasTool from subrepo to just a regular file

--- a/public/drums.html
+++ b/public/drums.html
@@ -52,7 +52,7 @@
     <script src="js/libs/jquery-3.1.0.min.js"></script>
     <script src="js/libs/sprintf.js"></script>
     <script src="js/RhythmTool.js"></script>
-    <script src="CanvasTool/js/CanvasTool.js"></script>
+    <script src="js/CanvasTool.js"></script>
     <script src="js/RhythmCanvasGUI.js"></script>
     <script src="js/libs/dat.gui.js"></script>
     <script>
