added stuff so that drumTool doesn't need main reactive video distribution

--- a/public/drumTool.html
+++ b/public/drumTool.html
@@ -57,9 +57,9 @@
     <script src="js/RhythmCanvasGUI.js"></script>
     <script src="js/DrumTool.js"></script>
     <script src="js/StateVariables.js"></script>
-    <script src="../js/LeapClient.js"></script>
-    <script src="../js/LeapRenderer.js"></script>
-    <script src="../js/libs/math3d.js"></script>
+    <script src="js/rvlibs/LeapClient.js"></script>
+    <script src="js/rvlibs/LeapRenderer.js"></script>
+    <script src="js/libs/math3d.js"></script>
     <script src="js/CanvasLeapWatcher.js"></script>
     <!--
     <script src="js/CanvasSkelWatcher.js"></script>
