--- a/public/drumTool.html
+++ b/public/drumTool.html
@@ -52,6 +52,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/libs/jquery-3.1.0.min.js"></script>
     <script src="js/libs/sprintf.js"></script>
+    <script src="js/GamePad.js"></script>
     <script src="js/RhythmTool.js"></script>
     <script src="js/CanvasTool.js"></script>
     <script src="js/RhythmCanvasGUI.js"></script>
@@ -68,6 +69,7 @@
     <script>
         var rt = new RhythmTool({guiClass: RhythmCanvasGUI});
         let drumTool = new DrumTool(rt);
+        let taikoControl = new TaikoControl(drumTool);
         rt.start();
     </script>
 
