--- a/public/drums.html
+++ b/public/drums.html
@@ -54,9 +54,11 @@
     <script src="js/RhythmTool.js"></script>
     <script src="js/CanvasTool.js"></script>
     <script src="js/RhythmCanvasGUI.js"></script>
+    <script src="js/GamePad.js"></script>
     <script src="js/libs/dat.gui.js"></script>
     <script>
         var rt = new RhythmTool({guiClass: RhythmCanvasGUI});
+        let taikoControl = new TaikoControl(rt);
         rt.start();
     </script>
 
